Added keywords in json

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	},
 	"version": "1.0.0",
 	"description": "This is my begineer backend journey",
-	"keywords": [],
+	"keywords": ["freecodecamp", "informative", "beginner-friendly"],
 	"author": "Siddhant",
 	"license": "ISC",
 	"bugs": {
