--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
-		"express": "^4.14.0"
+		"package-name":"@freecodecamp/example",
+		"express": "^1.1.0"
 	},
 	"main": "server.js",
 	"scripts": {
