--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
 		"package-name":"@freecodecamp/example",
-		"express": "^1.1.0"
+		"express": "1.1.0"
 	},
 	"main": "server.js",
 	"scripts": {
