--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
-		"package-name":"@freecodecamp/example",
-		"express": "1.1.0"
+		"@freecodecamp/example":"1.1.0",
+		"express": "^4.14.0"
 	},
 	"main": "server.js",
 	"scripts": {
